[B]Version 0.1.2[/B]
    * Fixed problems with scraping category 'All' and specific movies
    * Changed plugin logo, due to the new website design
    * Show progress dialog while fetching posts
    * Added new setting to hide all subcategories
    * Fixed problem with 'refused connection' due to multiple fetches

[B]Version 0.1.1[/B]
    * Fixed problems with the new website design

[B]Version 0.1.0[/B]
    * Initial release