@@ -1,3 +1,8 @@
+[B]Version 0.2.0[/B]
+    * Refactoring (Using now the library DDLScraper)
+    * Added search function
+    * Fixed problem with posts, that have no image. Sometimes XBMC didn't react anymore
+
 [B]Version 0.1.2[/B]
     * Fixed problems with scraping category 'All' and specific movies
     * Changed plugin logo, due to the new website design
